--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     },
     "dependencies": {
         "bootstrap": "4.3.1",
+        "gulp-gh-pages": "^0.5.4",
         "jquery": "3.4.1"
     },
     "devDependencies": {
